tests/NormalTests/paczka1/fuzzy1/61590007.err
Error in line 3: DNBD S250 98,0
Error in line 22: m6L2mT A821 76,37
Error in line 23: DWZGXktZ S250 24,3
Error in line 27: m6L2mT S250 11,N
